--- a/public/smnsk.html
+++ b/public/smnsk.html
@@ -105,6 +105,7 @@ body { background-image: url('roads.png');
 <div class='col-md-1'></div>
 <div class='col-md-1'></div>
 </div>
+<p><a href="/cgi/">アップロード</a></p>
 <hr>
 管理人 <a href="/123456/"><img class='home' src="/123456/home.gif"></a>
 </div></body></html>
